[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "flusteredworthwhileoffice"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
konlpy = "^0.5.2"
python = "^3.7"
wordcloud = "^1.7"
flask = "^1.1"
[tool.poetry.dev-dependencies]
